# internal/data/entity/orders_entity.go
@@ -1,5 +1,9 @@
 package entity
 
+import (
+	v1 "order-service/api/v1/order"
+)
+
 const OrdersTableName = "orders"
 
 func (*OrdersEntity) TableName() string {
@@ -14,4 +18,22 @@ type OrdersEntity struct {
 	Status     string `gorm:"column:status"`
 	ServerID   int64  `gorm:"column:server_id"`
 	Base
+}
+
+func (entity *OrdersEntity) ToProto(data *v1.OrderData) {
+	data.Id = entity.ID
+	data.CartId = entity.CartID
+	data.CustomerId = entity.CustomerID
+	data.Status = entity.Status
+	data.PaymentRef = entity.PaymentRef
+	data.ServerId = entity.ServerID
+	data.CreatedAt = entity.CreatedAt.String()
+}
+
+func (entity *OrdersEntity) FromCreateOrderRequest(data *v1.CreateOrderRequest) {
+	entity.CustomerID = data.CustomerId
+	entity.PaymentRef = data.PaymentRef
+	entity.CartID = data.CartId
+	entity.Status = "CREATED"
+	entity.ServerID = 1
 }
